# $Id$

2011-02-23 <fumiyas at OSS Technology, Inc. Japan>
	* smbldap_tools.pm: get_next_id(): Use getgrgid() for GID number
	* smbldap-populate: Fix wrong sambaGroupType values for local groups
	* Replace bare "smbpasswd" with "$config{smbpasswd}"

2010-11-15 <mm@FreeBSD.org>
	* smbldap-useradd:
	  - fix Z option in getopt (custom LDAP attribute)
	  - drop unused L option from getopt
	  - alphabetically reorganize getopt options
	  - fix several mis-spellings and typos
	(thx to Paul Howarth <paul@city-fan.org>)
	* other utilities:
	  - alphabetically reorganize getopt and help
	* new tag 0.9.6

2010-10-21 <mm@FreeBSD.org>
	* new tool: smbldap-grouplist (list LDAP groups)
	* smbldap-useradd, smbldap-usershow, smbldap-usermod:
	  - change default encoding of givenName and sn to UTF-8 (bug #11717)
	  - new option: -X (input/output encoding, defaults to UTF-8)
	  - new option: -O (localMailAddress attribute)
	  - changed option: -M (now sets only mail attribute)
	  - home directory is now chowned as $userUidNumber:$userGidNumber
	    (bug #11721)
	  - use gecos as displayName if givenName and userSN not provided
	    (bug #14517)
	* smbldap-passwd:
	  - new option: -p (allow root to set password from 
	    STDIN without verification, e.g. using a pipe) (bug #11964)
	  - change userPassword, shadowLastChange and shadowMax individually
	    e.g. no shadow class or user may not have rights (bug #15052)
	* smbldap-groupmod: allow deletion of users from groups without 
	  a defined samba group SID)
	* remove references to smbldap_conf.pm

2008-04-22 <jtournier@gmail.com>
	* new tag 0.9.5

2008-04-13 <jtournier@gmail.com>
	* smbldap-useradd: new option '-W' to add a computer account with samba
	attributes (for account creation through samba, use '-w')
	* smbldap_tools.pm: added ldaps support
	* smbldap.conf: new option 'ldapSSL' for SSL support

2008-03-05 <jtournier@gmail.com>
	* smbldap-usershow: if nscd is up dans running, restart the service