@@ -1,7 +1,10 @@
 # $Id$
 
-2011-02-23 <fumiyas at OSS Technology, Inc. Japan>
-	* smbldap_tools.pm: get_next_id(): Use getgrgid() for GID number
+2011-02-23 <fumiyas at OSS echnology, Inc. Japan>
+	* smbldap_tools.pm:
+	  - get_next_id: Use getgrgid() for GID number
+	  - read_parameter: Use lexically-scoped variable $line instead of
+	    global $_
 	* smbldap-populate: Fix wrong sambaGroupType values for local groups
 	* Replace bare "smbpasswd" with "$config{smbpasswd}"
 
